--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -65,8 +65,7 @@
   <label class="text-sm font-medium text-slate-300 mt-4 block">เขียนรีวิวหนัง</label>
   <textarea id="reviewText"
     class="input h-28"
-    placeholder="I wanted to like this sci-fi movie, but I couldn't. I hated the plot
-..."></textarea>
+    placeholder="I wanted to like this sci-fi movie, but I couldn't. I hated the plot..."></textarea>
 
   <!-- TAGS -->
   <label class="text-sm font-medium text-slate-300 mt-4 block">Tags หนัง</label>
